[gd_scene load_steps=3 format=2]

[ext_resource path="res://elements/TextLine.gd" type="Script" id=1]
[ext_resource path="res://styling/themes/client_standard.tres" type="Theme" id=2]

[node name="TextLine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -744.0
margin_bottom = -555.0
rect_min_size = Vector2( 280, 0 )
size_flags_horizontal = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
rect_min_size = Vector2( 280, 30 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameTag" type="Label" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
text = "Bob Modese"

[node name="ChatText" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 26.0
margin_right = 280.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "Said some stuff
asdasda
asdad"
visible_characters = 0
percent_visible = 0.0
text = "Said some stuff
asdasda
asdad"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShowTextTween" type="Tween" parent="."]

[connection signal="resized" from="VBoxContainer/ChatText" to="." method="_on_ChatText_resized"]
